Fixed round timeline kills wrong positioning

--- a/client-angular/src/app/components/round-timeline/round-timeline.component.scss
+++ b/client-angular/src/app/components/round-timeline/round-timeline.component.scss
@@ -10,7 +10,7 @@
 #timeline-line {
     position: relative;
     height: 5px;
-    width: 100%;
+    width: 5%;
     margin-top: 10px;
     background-color: white;
     opacity: 70%;
